--- a/src/main/resources/templates/news-table.html
+++ b/src/main/resources/templates/news-table.html
@@ -6,15 +6,14 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>TODO supply a title</title>
+        <title>Egg news!</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             />
-
-        <link th:href="@{../css/index.css}" rel="stylesheet"></link>
+        <link rel="stylesheet" th:href="@{../css/timeline.css}" type="text/css"/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,26 +24,41 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link disabled" th:href="@{/}">Home</a>
+                        <a class="nav-link" th:href="@{../}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news}">News</a>
+                        <a class="nav-link disabled" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news/create}">Add a new</a>
+                        <a class="nav-link" th:href="@{../news/create}">Add a new</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist}">Journalists</span></a>
+                        <a class="nav-link" th:href="@{../journalist}">Journalists</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist/create}">Register a journalist</a>
+                        <a class="nav-link" th:href="@{../journalist/create}">Register a journalist</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <h1 class="lead"> LOGRADO CON EXITO </h1>
+        <div class="container">
+            <div class="top-section">
+                <h1>Enjoy the news!!</h1>
+            </div>
+            <div class="timeline">
+                <div class="line"></div>
+                <div th:each="news : ${newsList}" class="section">
+                    <div class="bead"></div>
+                    <div class="content">
+                        <h2 th:text="${news.title}"></h2>
+                        <p th:text="${news.body}"></p>
+                        <p th:text="${news.journalist.name}"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            th:src="@{../js/timeline.js}"
         ></script>
     </body>
 </html>
