--- a/src/main/resources/static/css/timeline.css
+++ b/src/main/resources/static/css/timeline.css
@@ -1,102 +1,127 @@
 body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  font-weight: 400;
-  color: white;
-  background-color: #4c4177;
-  background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    font-weight: 400;
+    color: white;
+    background-color: #4c4177;
+    background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
 }
 
 .container {
-  padding: 2rem;
-  padding-bottom: 400px;
-  margin: 0 auto;
-  max-width: 800px;
+    padding: 2rem;
+    padding-bottom: 400px;
+    margin: 0 auto;
+    max-width: 800px;
 }
 
 .top-section {
-  text-align: center;
-  padding: 4rem 0;
-  max-width: 600px;
-  margin: 0 auto;
+    text-align: center;
+    padding: 4rem 0;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .timeline {
-  position: relative;
-  min-height: 150px;
+    position: relative;
+    min-height: 150px;
 }
 
 .line {
-  position: absolute;
-  z-index: 2;
-  left: calc(50% - 1px);
-  width: 2px;
-  top: -50px;
-  bottom: -50px;
-  background-color: #000;
-  display: none;
+    position: absolute;
+    z-index: 1;
+    left: calc(50% - 1px);
+    width: 2px;
+    top: -50px;
+    bottom: -50px;
+    background-color: #000;
+    display: none;
 }
 
 .line:before,
 .line:after {
-  position: absolute;
-  display: block;
-  content: "";
-  height: 1rem;
-  width: 1rem;
-  border-radius: 50%;
-  background-color: #000;
-  left: 50%;
-  transform: translateX(-50%);
+    position: absolute;
+    display: block;
+    content: "";
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    background-color: #000;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .line:after {
-  bottom: 0;
+    bottom: 0;
 }
 
 .section {
-  display: flex;
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: 600ms ease;
-  position: relative;
-  z-index: 1;
-  margin: 50px 0;
-  padding: 1rem;
-  border-radius: 1rem;
-  align-items: center;
-  min-height: 300px;
+    display: flex;
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: 600ms ease;
+    position: relative;
+    z-index: 1;
+    margin: 50px 0;
+    padding: 1rem;
+    border-radius: 1rem;
+    align-items: center;
+    min-height: 300px;
 }
 
 .section:nth-child(odd) {
-  flex-direction: row-reverse;
-  transform: translateX(100%);
+    flex-direction: row-reverse;
+    transform: translateX(100%);
 }
 
 .bead {
-  position: absolute;
-  display: block;
-  height: 1rem;
-  width: 1rem;
-  border-radius: 50%;
-  background-color: #000;
-  left: 50%;
-  top: 20%;
-  transform: translateX(-50%);
+    position: absolute;
+    z-index: 3;
+    justify-content: center;
+    color: white;
+    display: block;
+    height: 3.5rem;
+    width: 3.5rem;
+    border-radius: 50%;
+    background-color: #000;
+    left: 50%;
+    top: 30%;
+    transform: translateX(-50%);
 }
 
+.date{
+    width: inherit;
+    height: auto;
+    top: 50%;
+    transform: translateY(60%);
+    text-align: center;
+}
+
+.bigCircle{
+    height: 5rem;
+    width: 5rem;
+    text-align: center;
+    justify-content: center;
+    text-decoration: none;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+
+
 .content {
-  width: calc(50% - 2rem);
+    padding-left: 2rem;
+    width: calc(50% - 2rem);
 }
 
 .show-me:nth-child(n) {
-  transform: none;
-  opacity: 1;
+    transform: none;
+    opacity: 1;
 }
 
 h1 {
-  font-weight: 400;
-  letter-spacing: 1px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
+
