--- a/src/main/resources/templates/news-modify.html
+++ b/src/main/resources/templates/news-modify.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
             />
         <link th:href="@{../css/formStyle.css}" rel="stylesheet"/>
-        <title>Creating a new!</title>
+        <title>Modifying a new!</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,7 +29,7 @@
                         <a class="nav-link" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{../news/create}">Add a new</a>
+                        <a class="nav-link" th:href="@{../news/create}">Add a new</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../journalist}">Journalists</span></a>
@@ -45,16 +45,17 @@
                 <div class="row align-items-stretch justify-content-center no-gutters">
                     <div class="col-md-7">
                         <div class="form h-100 contact-wrap p-5">
-                            <h3 class="text-center">Creating a new!</h3>
+                            <h3 class="text-center">Modifying a new!</h3>
                             <form
                                 class="mb-5 needs-validation"
                                 id="contactForm"
                                 name="contactForm"
                                 autocomplete="off"
                                 method="POST"
-                                action="/news/add"
+                                action="/news/modify"
                                 novalidate
                                 >
+                                <input hidden type="text" th:value="${news.id}"/>
                                 <div class="row">
                                     <div class="col-md-6 form-group mb-3">
                                         <label for="title" class="col-form-label">Title *</label>
@@ -101,7 +102,7 @@
                                 </div>
                                 <div class="row justify-content-center">
                                     <div class="col-md-5 form-group text-center">
-                                        <button type="submit" class="btn btn-block btn-primary rounded-0 py-2 px-4">Register</button>
+                                        <button type="submit" class="btn btn-block btn-primary rounded-0 py-2 px-4">Modify</button>
                                     </div>
                                 </div>
                             </form>
