--- a/src/main/resources/templates/news-create.html
+++ b/src/main/resources/templates/news-create.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{../news/create}">Add a new</a>
+                        <a class="nav-link disabled" th:href="@{../news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../journalist}">Journalists</span></a>
