--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>TODO supply a title</title>
+        <title>Egg News!</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link
@@ -31,7 +31,7 @@
                         <a class="nav-link" th:href="@{/news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news/create}">Add a new</a>
+                        <a class="nav-link" th:href="@{/news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/journalist}">Journalists</span></a>
@@ -42,7 +42,8 @@
                 </ul>
             </div>
         </nav>
-        <h1 class="lead"> LOGRADO CON EXITO </h1>
+        <h1 align="center"> Welcome to egg news! </h1>
+        <h3>Use the navbar to see the news!</h3>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         ></script>
