--- a/src/main/resources/templates/journalist-create.html
+++ b/src/main/resources/templates/journalist-create.html
@@ -17,7 +17,7 @@
         <!-- Style -->
         <link rel="stylesheet" th:href="@{../css/formStyle.css}"/>
 
-        <title>Contact Form #10</title>
+        <title>Registering a journalist!</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,7 +34,7 @@
                         <a class="nav-link" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{../news/create}">Add a new</a>
+                        <a class="nav-link" th:href="@{../news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../journalist}">Journalists</span></a>
@@ -87,6 +87,8 @@
                                         <div class="invalid-feedback">Enter a valid lastname</div>
                                     </div>
                                 </div>
+                                <br>
+                                    
                                 <div class="row justify-content-center">
                                     <div class="col-md-5 form-group text-center">
                                         <button type="submit" class="btn btn-block btn-primary rounded-0 py-2 px-4">Register</button>
