--- a/src/main/resources/templates/journalist-modify.html
+++ b/src/main/resources/templates/journalist-modify.html
@@ -4,15 +4,20 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
+        <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--Vale dice que mires bien estas rutas-->
+
+        <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             />
-        <link th:href="@{../../css/formStyle.css}" rel="stylesheet"/>
-        <title>Modifying a new!</title>
+
+        <!-- Style -->
+        <link rel="stylesheet" th:href="@{../../css/formStyle.css}"/>
+
+        <title>Modifying a Journalist!</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -45,59 +50,42 @@
                 <div class="row align-items-stretch justify-content-center no-gutters">
                     <div class="col-md-7">
                         <div class="form h-100 contact-wrap p-5">
-                            <h3 class="text-center">Modifying a new!</h3>
+                            <h3 class="text-center">Modifying a Journalist</h3>
                             <form
                                 class="mb-5 needs-validation"
                                 id="contactForm"
                                 name="contactForm"
-                                autocomplete="off"
                                 method="POST"
-                                th:action="@{/news/modify/__${news.id}__}"
+                                th:action="@{/journalist/modify/__${journalist.id}__}"
+                                autocomplete="off"
                                 novalidate
+
                                 >
-                                <input hidden type="text" th:value="${news.id}" name="id"/>
                                 <div class="row">
+                                    <input type='text' hidden name="id" th:value="${journalist.id}"/>
                                     <div class="col-md-6 form-group mb-3">
-                                        <label for="title" class="col-form-label">Title *</label>
+                                        <label for="name" class="col-form-label">Name *</label>
                                         <input
                                             type="text"
                                             class="form-control"
-                                            name="title"
-                                            id="title"
-                                            placeholder="Title of the news"
+                                            name="name"
+                                            id="name"
+                                            placeholder="Your name"
                                             required
                                             />
-                                        <div class="invalid-feedback">Enter a valid title</div>
+                                        <div class="invalid-feedback">Enter a valid name</div>
                                     </div>
-                                    <div class="col-md-4 form-group mb-3">
-                                        <label for="journalistId" class="col-form-label">Select a Journalist</label>
-                                        <select name="journalistId" class="form-control" required>
-                                            <option value="" disabled selected hidden>Click me</option>
-
-                                            <option th:each="journalist : ${journalists}"
-                                                    th:value="${journalist.id}"
-                                                    th:text="${journalist.lastName}"></option>
-                                        </select>
-                                        <div class="invalid-feedback">Select a journalist</div>
-                                    </div>
-                                    <div class="col-md-2 form-group mb-3">
-                                        <a class="btn btn-block btn-primary rounded-0 py-2 px-4" th:href="@{../journalist/create}">Add one</a>
-                                    </div>
-                                </div>
-
-                                <div class="row mb-5">
-                                    <div class="col-md-12 form-group mb-3">
-                                        <label for="body" class="col-form-label">Body *</label>
-                                        <textarea
+                                    <div class="col-md-6 form-group mb-3">
+                                        <label for="lastName" class="col-form-label">Lastname *</label>
+                                        <input
+                                            type="text"
                                             class="form-control"
-                                            name="body"
-                                            id="body"
-                                            cols="30"
-                                            rows="4"
-                                            placeholder="Describe the news"
+                                            name="lastName"
+                                            id="lastName"
+                                            placeholder="Your lastname"
                                             required
-                                            ></textarea>
-                                        <div class="invalid-feedback">Enter a body</div>
+                                            />
+                                        <div class="invalid-feedback">Enter a valid lastname</div>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center">
@@ -112,9 +100,7 @@
                 </div>
             </div>
         </div>
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        ></script>
+        <script th:src="@{../../js/validation.js}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
