--- a/src/main/resources/templates/journalist-table.html
+++ b/src/main/resources/templates/journalist-table.html
@@ -13,7 +13,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             />
-        
+
         <link rel="stylesheet" th:href="@{../css/journalist.css}" type="text/css"/>
     </head>
 
@@ -32,7 +32,7 @@
                         <a class="nav-link" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{../news/create}">Add a new</a>
+                        <a class="nav-link" th:href="@{../news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" th:href="@{../journalist}">Journalists</span></a>
@@ -43,14 +43,32 @@
                 </ul>
             </div>
         </nav>
+
         <h2 class="section-title">Our Journalists</h2>
 
         <div class="media-scroller snaps-inline">
             <div th:each="journalist : ${journalists}" class="media-element">
                 <p th:text="${journalist.name}"class="title"></p>
                 <p th:text="${journalist.lastName}"class="title"></p>
-            </div>
+                <div>
 
+                    <div style="float: left">
+                        <a class="btn btn-outline-warning btn-sm"
+                           th:href="@{../journalist/modify/__${journalist.id}__}">
+                            Modify
+                        </a>
+                    </div>
+                    <div style="float: right">
+                        <form th:action="@{../journalist/delete/__${journalist.id}__}" method="POST">
+                            <button class="btn btn-outline-danger btn-sm">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 form-group mb-6">
+                <a class="btn btn-block btn-primary rounded-0 py-2 px-4" th:href="@{../journalist/create}">Add one</a>
+            </div>
         </div>
+
     </body>
 </html>
