--- a/src/main/resources/static/css/formStyle.css
+++ b/src/main/resources/static/css/formStyle.css
@@ -1,16 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
+
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Arimo', sans-serif;
+
     background-color: #efefef;
     line-height: 1.9;
     color: #8c8c8c;
-    background-color: #4c4177;
-    background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
     position: relative;
+       background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
+   background-repeat: no-repeat;
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: "Roboto", sans-serif;
     color: #000; }
 
 a {
@@ -27,9 +45,7 @@ a, a:hover {
     padding: 7rem 0; 
 }
 
-.heading {
-    font-size: 2.5rem;
-    font-weight: 900; }
+
 
 .form-control {
     border: none;
@@ -45,116 +61,46 @@ a, a:hover {
     box-shadow: none;
     border-color: #000; }
 
-.col-form-label {
-    color: #000;
-    font-size: 13px; }
 
-.btn, .form-control, .custom-select {
-    height: 45px;
-    border-radius: 0; }
-
-.custom-select {
-    border: none;
-    border-bottom: 1px solid #ccc;
-    padding-left: 0;
-    padding-right: 0;
-    border-radius: 0; }
-.custom-select:active, .custom-select:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-color: #000; }
-
-.btn {
-    border: none;
-    border-radius: 0;
-    font-size: 11px;
-    letter-spacing: .2rem;
-    text-transform: uppercase;
-    border-radius: 30px !important;
-}
-.btn.btn-primary {
-    border-radius: 30px;
-    background: #4d80e4;
-    color: #fff;
-    -webkit-box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2);
-    box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2); 
-}
-.btn:hover {
-    color: #fff;
-}
-.btn:active, .btn:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none; 
-}
 
 .contact-wrap {
     border-radius: 20px !important;
     -webkit-box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2);
-    background: #fff;
-}
-.contact-wrap .col-form-label {
-    font-size: 14px;
-    color: #b3b3b3;
-    margin: 0 0 10px 0;
-    display: inline-block;
-    padding: 0; 
+    background: #F2eee3;
 }
 
-.contact-wrap .form, .contact-wrap .contact-info {
-    border-radius: 15px;
-    padding: 40px; 
-}
-.contact-wrap .contact-info {
-    color: rgba(255, 255, 255, 0.5); 
-}
-.contact-wrap .contact-info ul li {
-    margin-bottom: 15px;
-    color: rgba(255, 255, 255, 0.5);
-}
-.contact-wrap .contact-info ul li .wrap-icon {
-    font-size: 20px;
-    color: #fff;
-    margin-top: 5px;
-}
-.contact-wrap .form {
-    background: #fff; 
-}
-.contact-wrap .form h3 {
-    color: #000;
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 30px; 
-}
-.contact-wrap .contact-info {
-    height: 100vh;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-.contact-wrap .contact-info a {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0; 
-}
-@media (max-width: 1199.98px) {
-    .contact-wrap .contact-info {
-        height: 400px !important; 
-    } 
-}
-.contact-wrap .contact-info h3 {
-    color: #fff;
-    font-size: 20px;
-    margin-bottom: 30px; 
-}
-
-label.error {
+.button {
+    box-sizing: border-box;
+    border-radius: 20px;
+    border: 1px solid #F2eee3;
+    background-color: #F2eee3;
+    color: black;
     font-size: 12px;
-    color: red;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    border-color: red;
 }
 
+.button:active {
+    transform: scale(0.95);
+}
 
+.button:focus {
+    outline: none;
+}
+
+.button:hover{
+    color: #000;
+}
+
+.button.ghost {
+    background-color: transparent;
+    border-color: red;
+}
+.btn{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
