--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,35 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
+
+body {
+    font-family: 'Arimo', sans-serif;
     color: white;
-    background-color: #4c4177;
-    background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
+    width: 100%;
+    height:100%;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+h3{
+    text-align: center;
+    margin-top: 25px;
+
+}
+
+
+.btn{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
