--- a/src/main/resources/static/css/logs.css
+++ b/src/main/resources/static/css/logs.css
@@ -1,10 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
 
 body {
+    font-family: 'Arimo', sans-serif;
+
     height:100%;
     width: 100%;
-    background-color: #4c4177;
-    background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
+       background-repeat: no-repeat;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 h1 {
@@ -200,23 +217,6 @@ input {
     transform: translateX(20%);
 }
 
-.social-container {
-    margin: 20px 0;
-}
-
-.social-container a {
-    border: 1px solid red;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    height: 40px;
-    width: 40px;
-    background: #f2eee3;
-}
-
-
 
 .toggle{
     width:30px;
@@ -230,3 +230,6 @@ input {
     cursor: pointer;
 }
 
+.btn{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
