--- a/src/main/resources/static/css/timeline.css
+++ b/src/main/resources/static/css/timeline.css
@@ -1,16 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Arimo', sans-serif;
+
     margin: 0;
     padding: 0;
     line-height: 1.5;
     font-weight: 400;
     color: white;
-    background-color: #4c4177;
-    background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+       background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
+    background-repeat: no-repeat;
 }
 
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 *{
     margin:0;
     padding:0;
@@ -29,11 +44,12 @@ body {
     position: relative;
 }
 .timeline-items::before{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     content: '';
     position: absolute;
     width: 2px;
     height: 100%;
-    background-color: #2f363e;
+    background-color: #F2eee3;
     left: calc(50% - 1px);
 }
 .timeline-item{
@@ -66,28 +82,62 @@ body {
     margin:6px 0 15px;
 }
 .timeline-content{
-    background-color: #2f363e;
+    margin: 10px;
+    text-align: center;
+    border-radius: 13px;
+    transition: 200ms ease-in-out;
+    background-color: #F2eee3;
     padding: 30px;
     border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+
 .timeline-content h3{
     font-size: 20px;
-    color: #ffffff;
+    color: #000;
     margin:0 0 10px;
     text-transform: capitalize;
     font-weight: 500;
 }
 .timeline-content p{
-    color: #c8c8c8;
+    color: #000;
     font-size: 16px;
     font-weight: 300;
     line-height: 22px;
 }
 
-#timeline-button{
+.button{
+    text-decoration: none;
+    border-radius: 20px;
+    border: 1px solid #F2eee3;
+    background-color: #F2eee3;
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    border-color: red;
     margin-top: 20px;
     position: absolute;
-    left: 47%;
+    left: 46%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+
+.button:active {
+    transform: scale(0.95);
+}
+
+.button:focus {
+    outline: none;
+}
+
+.button.ghost {
+    background-color: transparent;
+    border-color: red;
 }
 
 /* responsive */
@@ -106,4 +156,9 @@ body {
     .timeline-dot{
         left:0;
     }
+}
+
+
+.btn{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
