--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<!--
-// Curso Egg FullStack
--->
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" 
+      xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Egg News!</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             />
 
-        <link th:href="@{../css/index.css}" rel="stylesheet"></link>
+        <!-- Style -->
+        <link rel="stylesheet" th:href="@{../css/formStyle.css}"/>
+
+        <title>Registering a journalist!</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,32 +28,52 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link disabled" th:href="@{/}">Home</a>
+                        <a class="nav-link" th:href="@{../}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news}">News</a>
+                        <a class="nav-link disabled" th:href="@{../news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news/create}">Add a news</a>
+                        <a class="nav-link disabled" th:href="@{../news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist}">Journalists</span></a>
+                        <a class="nav-link disabled" th:href="@{../journalist}">Journalists</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist/create}">Register a journalist</a>
+                        <a class="nav-link disabled" th:href="@{../journalist/create}">Register a journalist</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
-        <div th:if="${null != logged}" class="card text-white bg-success mb-3 mt-3">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${logged}"></h5>
+        <div class="content">
+            <div class="container">
+                <div class="row align-items-stretch justify-content-center no-gutters">
+                    <div class="col-md-7">
+                        <div class="form h-100 contact-wrap p-5">
+                            <div class="row">
+
+                                <h3 class="text-center">Welcome to eggNews!</h3>
+                                <br>
+
+                                    <div class="col-md-6 form-group mb-3 text-center">
+                                        <h4>Have an account?</h4>
+
+                                        <a class="button" th:href="@{/sign_in}">Sign In!</a>
+
+                                    </div>
+                                    <div class="col-md-6 form-group mb-3 text-center">
+                                        <h4>Want to create one?</h4>
+
+                                        <a class="button" th:href="@{/sign_up}" >Sign Up!</a>
+
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <h1 align="center"> Welcome to egg news! </h1>
-        <h3>Use the navbar to see the news!</h3>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
