--- a/src/main/resources/templates/journalist-create.html
+++ b/src/main/resources/templates/journalist-create.html
@@ -21,14 +21,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" th:href="@{/}">EggNews</a>
+            <a class="navbar-brand" th:href="@{../logged-index}">EggNews</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" th:href="@{../}">Home</a>
+                        <a class="nav-link" th:href="@{../logged-index}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../news}">News</a>
@@ -41,6 +41,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" th:href="@{../journalist/create}">Register a journalist</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{../logout}">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +59,7 @@
                                 id="contactForm"
                                 name="contactForm"
                                 method="POST"
-                                action="/journalist/add"
+                                th:action="@{/journalist/add}"
                                 autocomplete="off"
                                 novalidate
 
@@ -88,12 +91,12 @@
                                     </div>
                                 </div>
                                 <br>
-                                    
-                                <div class="row justify-content-center">
-                                    <div class="col-md-5 form-group text-center">
-                                        <button type="submit" class="btn btn-block btn-primary rounded-0 py-2 px-4">Register</button>
+
+                                    <div class="row justify-content-center">
+                                        <div class="col-md-5 form-group text-center">
+                                            <button type="submit" class="button">Register</button>
+                                        </div>
                                     </div>
-                                </div>
                             </form>
 
                         </div>
