--- a/src/main/resources/templates/journalist-table.html
+++ b/src/main/resources/templates/journalist-table.html
@@ -19,14 +19,14 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" th:href="@{/}">EggNews</a>
+            <a class="navbar-brand" th:href="@{../logged-index}">EggNews</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" th:href="@{../}">Home</a>
+                        <a class="nav-link" th:href="@{../logged-index}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../news}">News</a>
@@ -40,33 +40,39 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../journalist/create}">Register a journalist</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{../logout}">Logout</a>
+                    </li>
                 </ul>
             </div>
         </nav>
 
         <h2 class="section-title">Our Journalists</h2>
 
-        <div class="media-scroller snaps-inline">
-            <div th:each="journalist : ${journalists}" class="media-element">
-                <p th:text="${journalist.name}"class="title"></p>
-                <p th:text="${journalist.lastName}"class="title"></p>
-                <div>
+        <div class="container">
+            <div class="wrap">
 
-                    <div style="float: left">
-                        <a class="btn btn-outline-warning btn-sm"
-                           th:href="@{../journalist/modify/__${journalist.id}__}">
-                            Modify
-                        </a>
-                    </div>
-                    <div style="float: right">
-                        <form th:action="@{../journalist/delete/__${journalist.id}__}" method="POST">
-                            <button class="btn btn-outline-danger btn-sm">Delete</button>
-                        </form>
+                <div th:each="journalist : ${journalists}" class="card">
+                    <h2 th:text="${journalist.name}"class="title"></h2>
+                    <h3 th:text="${journalist.lastName}"class="title"></h3>
+                    <div>
+
+                        <div style="float:left; margin-left: 15px">
+                            <a class="btn btn-outline-warning btn-sm"
+                               th:href="@{../journalist/modify/__${journalist.id}__}">
+                                Modify
+                            </a>
+                        </div>
+                        <div style="float:right; margin-right: 15px">
+                            <form th:action="@{../journalist/delete/__${journalist.id}__}" method="POST">
+                                <button class="btn btn-outline-danger btn-sm">Delete</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 form-group mb-6">
-                <a class="btn btn-block btn-primary rounded-0 py-2 px-4" th:href="@{../journalist/create}">Add one</a>
+
+                <a class="button" th:href="@{../journalist/create}">Add one</a>
+
             </div>
         </div>
 
