--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -28,19 +28,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link disabled" th:href="@{/}">Home</a>
+                        <a class="nav-link" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news}">News</a>
+                        <a class="nav-link disabled" th:href="@{/news}">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/news/create}">Add a news</a>
+                        <a class="nav-link disabled" th:href="@{/news/create}">Add a news</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist}">Journalists</span></a>
+                        <a class="nav-link disabled" th:href="@{/journalist}">Journalists</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/journalist/create}">Register a journalist</a>
+                        <a class="nav-link disabled" th:href="@{/journalist/create}">Register a journalist</a>
                     </li>
                 </ul>
             </div>
