--- a/src/main/resources/templates/news-create.html
+++ b/src/main/resources/templates/news-create.html
@@ -16,14 +16,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" th:href="@{/}">EggNews</a>
+            <a class="navbar-brand" th:href="@{../logged-index}">EggNews</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" th:href="@{../}">Home</a>
+                        <a class="nav-link" th:href="@{../logged-index}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../news}">News</a>
@@ -36,6 +36,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{../journalist/create}">Register a journalist</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{../logout}">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +55,7 @@
                                 name="contactForm"
                                 autocomplete="off"
                                 method="POST"
-                                action="/news/add"
+                                th:action="@{/news/add}"
                                 novalidate
                                 >
                                 <div class="row">
@@ -68,7 +71,7 @@
                                             />
                                         <div class="invalid-feedback">Enter a valid title</div>
                                     </div>
-                                    <div class="col-md-4 form-group mb-3">
+                                    <div class="col-md-6 form-group mb-3">
                                         <label for="journalistId" class="col-form-label">Select a Journalist</label>
                                         <select name="journalistId" class="form-control" required>
                                             <option value="" disabled selected hidden>Click me</option>
@@ -78,10 +81,10 @@
                                                     th:text="${journalist.lastName}"></option>
                                         </select>
                                         <div class="invalid-feedback">Select a journalist</div>
+                                        <br>
+                                            <a class="button" th:href="@{../journalist/create}">Add one</a>
                                     </div>
-                                    <div class="col-md-2 form-group mb-3">
-                                        <a class="btn btn-block btn-primary rounded-0 py-2 px-4" th:href="@{../journalist/create}">Add one</a>
-                                    </div>
+
                                 </div>
 
                                 <div class="row mb-5">
@@ -101,7 +104,7 @@
                                 </div>
                                 <div class="row justify-content-center">
                                     <div class="col-md-5 form-group text-center">
-                                        <button type="submit" class="btn btn-block btn-primary rounded-0 py-2 px-4">Register</button>
+                                        <button type="submit" class="button">Register</button>
                                     </div>
                                 </div>
                             </form>
