--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -14,36 +14,37 @@
             rel="stylesheet"
             /> 
         <link rel="stylesheet" th:href="@{../css/logs.css}"/>
+         <link rel='stylesheet' th:href="@{../css/navbar.css}"/>
 
 
     </head>
 
     <body>
+        <nav>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" th:href="@{/}">EggNews</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{/news}">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{/news/create}">Add a news</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{/journalist}">Journalists</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" th:href="@{/journalist/create}">Register a journalist</a>
-                    </li>
-                </ul>
-            </div>
+
+            <ul>
+                <li>
+                    <a th:href="@{../logged-index}">Home</a>
+                </li>
+                <li>
+                    <a th:href="@{../news}">News</a>
+                </li>
+                <li >
+                    <a th:href="@{../news/create}">Add a news</a>
+                </li>
+                <li >
+                    <a  th:href="@{../journalist}">Journalists</span></a>
+                </li>
+                <li >
+                    <a  th:href="@{../journalist/create}">Register a journalist</a>
+                </li>
+                <li>
+                    <a class="nav-link" th:href="@{../logout}">Logout</a>
+                </li>
+
+            </ul>
+
         </nav>
 
         <div id="container" th:attr="class=${action == 'sign_up' ? 'right-panel-active' : ''}">
@@ -132,8 +133,8 @@
                             id="signInPassword"
                             placeholder="Password" 
                             required>
-                        <span class="toggle" id="signInToggle"></span>
-                            
+                            <span class="toggle" id="signInToggle"></span>
+
                         </input>
                         <div class="invalid-feedback">Enter a valid password</div>
                     </div>
