--- a/src/main/resources/static/css/formStyle.css
+++ b/src/main/resources/static/css/formStyle.css
@@ -53,13 +53,16 @@ a, a:hover {
     padding-left: 0;
     padding-right: 0;
     border-radius: 0;
-    background: none; }
+    background-color: #f2eee3;
+}
 
 .form-control:active, .form-control:focus {
+    background-color: #f2eee3;
     outline: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    border-color: #000; }
+    border-color: #000; 
+}
 
 
 
@@ -83,6 +86,7 @@ a, a:hover {
     text-transform: uppercase;
     transition: transform 80ms ease-in;
     border-color: red;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .button:active {
@@ -101,6 +105,14 @@ a, a:hover {
     background-color: transparent;
     border-color: red;
 }
-.btn{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+select{
+    background-color: #f2eee3;
+    border-radius: 4px;
+    border: none;
+    width: 100%;
+    height:35%;
+    margin: 10px auto 12px auto;
+    border-bottom: 1px solid #ccc;
 }
