--- a/src/main/resources/static/css/journalist.css
+++ b/src/main/resources/static/css/journalist.css
@@ -3,58 +3,123 @@
 
 body {
     font-family: 'Arimo', sans-serif;
-
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 25s ease infinite;
     background-repeat: no-repeat;
 }
 
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-
-.conatiner {
-    width: 100%;
-    height: 500px;
-}
-.wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.box {
+    margin: 0;
+    padding: 0;
     align-items: center;
-    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 15px;
+    margin: 0 auto;
 }
-
 .card {
-    border-radius: 12px;
-    background-color: #f2eee3;
-    margin: 10px;
-    width: 350px;
-    height: 150px;
+    position: relative;
+    width: 300px;
+    height: 350px;
+    background: #F2eee3;
+    margin: 12px auto;
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.card:before,
+.card:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: #fff;
+    transition: 0.5s;
+    z-index: -1;
+}
+.card:hover:before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.card:hover:after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.card .imgBx {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background: #222;
+    transition: 0.5s;
+    z-index: 1;
+}
+
+.card:hover .imgBx {
+    bottom: 90px;
+}
+
+
+.card:nth-child(4n) .imgBx{
+    background: url("../imgs/female-avatar-2.png");
+}
+.card:nth-child(4n+1) .imgBx{
+    background: url("../imgs/male-avatar-1.png");
+}
+.card:nth-child(4n+2) .imgBx{
+    background: url("../imgs/female-avatar-1.png");
+}
+.card:nth-child(4n+3) .imgBx{
+    background: url("../imgs/male-avatar-2.png");
+}
+
+.card:nth-child(n) .imgBx{
+    background-size: cover;
+    background-repeat: no-repeat;
+    left:15px;
+
+}
+
+.card .details {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 25px;
+    height: 60px;
     text-align: center;
-    border-radius: 13px;
-    transition: 200ms ease-in-out;
-
-}
-.card:hover {
-    margin-bottom: -10px;
 }
 
-h2, h3{
-    color:#000;
+.card .details h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    color: #777;
+    text-transform: uppercase;
 }
+
+.card .details h2 span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #f38695;
+    display: block;
+    margin-top: 5px;
+}
+
+
+
 
 .button {
+    text-align:center;
+    width:200px;
+    margin: 0 auto;
     text-decoration: none;
     border-radius: 20px;
     border: 1px solid #F2eee3;
@@ -69,9 +134,6 @@ h2, h3{
     border-color: red;
 }
 
-.button:hover{
-    margin-bottom: -10px;
-}
 
 .button:active {
     transform: scale(0.95);
@@ -81,7 +143,6 @@ h2, h3{
     outline: none;
 }
 
-.button.ghost {
-    background-color: transparent;
-    border-color: red;
+.btn{
+    transform: translateY(-20px);
 }
