--- a/src/main/resources/static/css/logs.css
+++ b/src/main/resources/static/css/logs.css
@@ -81,7 +81,7 @@ button.ghost {
     text-align: center;
 }
 
-input {
+input, select {
     background-color: #f2eee3;
     border: none;
     padding: 12px 15px;
@@ -89,18 +89,25 @@ input {
     width: 100%;
 }
 
-#container {
+select{
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+}
 
-    margin: 10.7% auto;
+#container {
+    margin: 0 auto;
+    margin-top: 5%;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
         0 10px 10px rgba(0,0,0,0.22);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 900px;
     max-width: 100%;
-    min-height: 510px;
+    min-height: 550px;
 }
 
 .form-container {
@@ -232,4 +239,10 @@ input {
 
 .btn{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.invalid-feedback{
+    margin-top: 0px;
+    height:10px;
+    transform:translateY(-10px);
 }
