--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,74 +3,10 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-        <!-- Bootstrap CSS -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            />
-
-        <!-- Style -->
-        <link rel="stylesheet" th:href="@{../css/formStyle.css}"/>
-        <link rel='stylesheet' th:href="@{../css/navbar.css}"/>
-
-        <title>Registering a journalist!</title>
-    </head>
+    <head th:replace="/fragments/formsHead ::head"></head>
     <body>
-        <nav>
-
-            <ul>
-                <li>
-                    <a th:href="@{../}">Home</a>
-                </li>
-                <li>
-                    <a th:href="@{../news}">News</a>
-                </li>
-                <li >
-                    <a th:href="@{../news/create}">Add a news</a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist}">Journalists</span></a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist/create}">Register a journalist</a>
-                </li>
-
-            </ul>
-
-        </nav>
-        <div class="content">
-            <div class="container">
-                <div class="row align-items-stretch justify-content-center no-gutters">
-                    <div class="col-md-7">
-                        <div class="form h-100 contact-wrap p-5">
-                            <div class="row">
-
-                                <h3 class="text-center">Welcome to eggNews!</h3>
-                                <br>
-
-                                    <div class="col-md-6 form-group mb-3 text-center">
-                                        <h4>Have an account?</h4>
-
-                                        <a class="button" th:href="@{/sign_in}">Sign In!</a>
-
-                                    </div>
-                                    <div class="col-md-6 form-group mb-3 text-center">
-                                        <h4>Want to create one?</h4>
-
-                                        <a class="button" th:href="@{/sign_up}" >Sign Up!</a>
-
-                                    </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
+        <div th:replace="/fragments/index :: div"></div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
