--- a/src/main/resources/templates/journalist-modify.html
+++ b/src/main/resources/templates/journalist-modify.html
@@ -3,48 +3,10 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head th:replace="/fragments/formsHead ::head"></head>
 
-        <!-- Bootstrap CSS -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            />
-
-        <!-- Style -->
-        <link rel="stylesheet" th:href="@{../../css/formStyle.css}"/>
-
-        <title>Modifying a Journalist!</title>
-    </head>
     <body>
-        <nav>
-
-            <ul>
-                <li>
-                    <a th:href="@{../logged-index}">Home</a>
-                </li>
-                <li>
-                    <a th:href="@{../../news}">News</a>
-                </li>
-                <li >
-                    <a th:href="@{../../news/create}">Add a news</a>
-                </li>
-                <li >
-                    <a  th:href="@{../../journalist}">Journalists</span></a>
-                </li>
-                <li >
-                    <a  th:href="@{../../journalist/create}">Register a journalist</a>
-                </li>
-                <li>
-                     <a class="nav-link" th:href="@{../logout}">Logout</a>
-                </li>
-                   
-            </ul>
-
-        </nav>
+        <nav th:replace="@fragments/navbar :: nav"></nav>
 
         <div class="content">
             <div class="container">
@@ -76,24 +38,12 @@
                                             />
                                         <div class="invalid-feedback">Enter a valid name</div>
                                     </div>
-                                    <div class="col-md-6 form-group mb-3">
-                                        <label for="lastName" class="col-form-label">Lastname *</label>
-                                        <input
-                                            type="text"
-                                            class="form-control"
-                                            name="lastName"
-                                            id="lastName"
-                                            placeholder="Your lastname"
-                                            required
-                                            />
-                                        <div class="invalid-feedback">Enter a valid lastname</div>
+
+                                    <div class="row justify-content-center">
+                                        <div class="col-md-5 form-group text-center">
+                                            <button type="submit" class="button">Modify</button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row justify-content-center">
-                                    <div class="col-md-5 form-group text-center">
-                                        <button type="submit" class="button">Modify</button>
-                                    </div>
-                                </div>
                             </form>
 
                         </div>
