--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -5,7 +5,7 @@
 
     <head>
 
-        <title>Login</title>
+        <title>Egg News!</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -13,39 +13,14 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             /> 
-        <link rel="stylesheet" th:href="@{../css/logs.css}"/>
-         <link rel='stylesheet' th:href="@{../css/navbar.css}"/>
+        <link rel="stylesheet" th:href="@{/css/logs.css}"/>
+        <link rel='stylesheet' th:href="@{/css/navbar.css}"/>
 
 
     </head>
 
     <body>
-        <nav>
-
-
-            <ul>
-                <li>
-                    <a th:href="@{../logged-index}">Home</a>
-                </li>
-                <li>
-                    <a th:href="@{../news}">News</a>
-                </li>
-                <li >
-                    <a th:href="@{../news/create}">Add a news</a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist}">Journalists</span></a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist/create}">Register a journalist</a>
-                </li>
-                <li>
-                    <a class="nav-link" th:href="@{../logout}">Logout</a>
-                </li>
-
-            </ul>
-
-        </nav>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
 
         <div id="container" th:attr="class=${action == 'sign_up' ? 'right-panel-active' : ''}">
             <div class="form-container sign-up-container">
@@ -64,6 +39,7 @@
                             name="name"
                             id="name"
                             placeholder="Name"
+                            th:value="${name}"
                             required/>
                         <div class="invalid-feedback">Enter a valid name</div>
                     </div>
@@ -96,6 +72,17 @@
                         <div class="invalid-feedback">Both passwords must be the same</div>
                     </div>
                     <div>
+                        <select name="role" required>
+                            <option value="" disabled selected hidden>Select a role</option>
+                            <option th:each="role: ${roles}"
+                                    th:value="${role}"
+                                    th:text="${role.toString()}">
+                            </option>
+
+                        </select>
+                        <div class="invalid-feedback">Select a role</div>
+                    </div>
+                    <div>
                         <button type="submit">Sign Up</button>
                     </div>
                 </form>
@@ -123,6 +110,7 @@
                             name="email"
                             id="signInEmail"
                             placeholder="Email" 
+                            th:value="${email}"
                             required/>
                         <div class="invalid-feedback">Enter a valid email</div>
                     </div>
