--- a/src/main/resources/templates/news-create.html
+++ b/src/main/resources/templates/news-create.html
@@ -3,42 +3,10 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--Vale dice que mires bien estas rutas-->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            />
-        <link th:href="@{../css/formStyle.css}" rel="stylesheet"/>
-         <link rel='stylesheet' th:href="@{../css/navbar.css}"/>
-        <title>Creating a new!</title>
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li>
-                    <a th:href="@{../logged-index}">Home</a>
-                </li>
-                <li>
-                    <a th:href="@{../news}">News</a>
-                </li>
-                <li >
-                    <a th:href="@{../news/create}">Add a news</a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist}">Journalists</span></a>
-                </li>
-                <li >
-                    <a  th:href="@{../journalist/create}">Register a journalist</a>
-                </li>
-                <li>
-                    <a class="nav-link" th:href="@{../logout}">Logout</a>
-                </li>
+    <head th:replace="/fragments/formsHead ::head"></head>
 
-            </ul>
-        </nav>
+    <body>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
         <div class="content">
             <div class="container">
                 <div class="row align-items-stretch justify-content-center no-gutters">
@@ -68,9 +36,9 @@
                                         <div class="invalid-feedback">Enter a valid title</div>
                                     </div>
                                     <div class="col-md-6 form-group mb-3">
-                                        <label for="journalistId" class="col-form-label">Select a Journalist</label>
-                                        <select name="journalistId" class="form-control" required>
-                                            <option value="" disabled selected hidden>Click me</option>
+                                        <label for="journalistId" class="col-form-label"></label>
+                                        <select name="journalistId" required>
+                                            <option value="" disabled selected hidden>Select a Journalist</option>
 
                                             <option th:each="journalist : ${journalists}"
                                                     th:value="${journalist.id}"
