--- a/src/main/resources/static/css/logs.css
+++ b/src/main/resources/static/css/logs.css
@@ -9,7 +9,7 @@ body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 25s ease infinite;
-       background-repeat: no-repeat;
+    background-repeat: no-repeat;
 }
 
 @keyframes gradient {
@@ -93,8 +93,10 @@ select{
     border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
+    color:#757575;
     width:100%;
 }
+
 
 #container {
     margin: 0 auto;
@@ -107,7 +109,7 @@ select{
     overflow: hidden;
     width: 900px;
     max-width: 100%;
-    min-height: 550px;
+    min-height: 600px;
 }
 
 .form-container {
@@ -246,3 +248,11 @@ select{
     height:10px;
     transform:translateY(-10px);
 }
+
+/*input[type="file"]{
+    content:"";
+    border: 0px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}*/
+
